# shipping

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
apigateway/: Dockerfile  docker-entrypoint.sh  envoy.yaml
booking/: Dockerfile  go.mod  go.sum
booking/application/: event_handlers.go  event_service.go  logging_service.go  pb_converters.go  server.go  service.go  service_test.go
booking/cmd/client/: booking.go
booking/cmd/server/: booking.go  booking_server.go
booking/domain/: cargo.go  cargo_test.go  delivery.go  handling.go  itinerary.go  location.go  routing.go  sample_locations.go  sample_voyages.go  voyage.go
booking/infrastructure/: event_bus.go  inmem.go  routing_proxy.go  routing_proxy_test.go
elk/: filebeat.yml
frontend/: .dockerignore  Cargo.toml  Dockerfile  README.md  index.html
frontend/src/: booking.rs  handling.rs  lib.rs  tracking.rs
handling/: Cargo.toml  Dockerfile  build.rs
handling/src/: client.rs  domain.rs  error.rs  lib.rs  server.rs
handling/src/application/: error.rs  grpc_server.rs  integration_events.rs  logging_service.rs  mod.rs  pb.rs  service.rs
handling/src/application/integration_events/: event_handlers.rs
handling/src/domain/: handling.rs  location.rs  mod.rs  voyage.rs
handling/src/infrastructure/: inmem_repository.rs  location.rs  mod.rs  rabbitmq_eventbus.rs
handling/tests/: service_test.rs
pathfinder/: Dockerfile  go.mod  go.sum  logging.go  server.go
pathfinder/cmd/client/: main.go
pathfinder/cmd/server/: main.go
proto/: booking.proto  booking_events.proto  handling.proto  handling_events.proto  itinerary.proto  pathfinder.proto  tracking.proto
tracking/: Dockerfile  go.mod  go.sum
tracking/application/: event_handlers.go  grpc_server.go  logging_event_handler.go  logging_service.go  service.go  view_model.go
tracking/cmd/: tracking.go
tracking/cmd/client/: tracking_client.go
tracking/cmd/server/: tracking.go  tracking_server.go
tracking/infrastructure/: event_bus.go  inmem.go
