[package]
version = "0.1.0"
name = "frontend"
authors = ["hageshtrem <hageshtrem@yahoo.com>"]
description = "Frontend for DDD shipping app"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
serde = { version = "^1.0.122", features = ['derive'] }
serde_json = "1.0"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
