[package]
name = "handling"
version = "0.1.0"
authors = ["hageshtrem <hageshtrem@yahoo.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
chrono = "0.4"
log = "0.4"
lapin = "1.6"
async-trait = "0.1"
env_logger = "0.8"
bytes = "0.5"
structopt = "0.3"
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2.22", features = ["full"] }

[build-dependencies]
tonic-build = "0.3"
