[package]
name = "handling"
version = "0.1.0"
authors = ["hageshtrem <hageshtrem@yahoo.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
chrono = "0.4"
log = "0.4"
log4rs = { version = "1.0", features = ["console_appender", "file_appender"] }
lapin = "1.6"
async-trait = "0.1"
env_logger = "0.8"
bytes = "1.0"
structopt = "0.3"
tonic = { version = "0.4", features = ["transport"] }
tonic-health = "0.3"
prost = "0.7"
prost-types = "0.7"
futures-util = "0.3"
tokio = { version = "1.6", features = ["full"] }

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
tokio-test = "0.4"
